Implemented DTOs for AI